fix about text-align

--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ span:hover {
 .about-content p {
   font-size: 16px;
   margin: 20px 0 40px;
-  text-align: justify;
+  text-align: start;
   width: 600px;
 }
 
